fixed ui bug on mobile devices

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -25,11 +25,22 @@ body{
     /* Remove min-width and max-width properties */
     /* min-width: 70%;
     */
-    width: 100%; /* Allow elements to shrink and expand based on available space */
+    width: 70%; /* Allow elements to shrink and expand based on available space */
 }
 
-input[type="text"] {
-    width: auto;
+.postText, .commentInput{
+    width: 100%;
+    transition: width 0.15s;
+    max-width: 17em;
+}
+small {
+    margin-bottom: .5em;
+}
+
+
+.postText:focus, .commentInput:focus{
+    width: 100%;
+    height: 7.5em;
 }
 
 div.PostContainer{
@@ -64,7 +75,7 @@ div.PostContainer{
 }
 
 form{
-    width: 20em;
+    width: 100%;
 }
 
 
@@ -93,6 +104,7 @@ form{
 .body-container {
     display: flex;
     gap: 1.5em;
+    width: 100%;
 }
 
 .b{
@@ -102,14 +114,22 @@ form{
 }
 
 
-.right-container{
+.right-container {
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
+    flex: 1;
     gap: 1em;
+    width: 100%;
 }
 
 #posts{
     width: 100%;
+}
+
+*{
+    outline: 1px solid red;
 }
 
 
@@ -118,11 +138,24 @@ form{
     .body-container {
         flex-direction: column; 
         max-width: 100%; 
+        width: 100vw;
+        justify-content: center;
+        align-items: center;
+        margin: 0%;
+        padding: 0%;
     }
     .b{
         flex: 1 0 45%;
         max-width: calc(100% - 1em); 
         margin: 1em 0; 
+    }
+    .post{
+        width: 100%; 
+    }
+
+    .right-container{
+        flex: 1;
+       width: 100%;
     }
 }
 
@@ -135,7 +168,7 @@ form{
 
 .right-container{
     flex: 1;
-    width: calc(90% - 1.5em);
+    width: 100%;
 }
 
 form{
